FPVTL-1305 fix linst warnings